k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: giants-namespace

---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
