k8s/manifests/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: giants-service-frontend
  namespace: giants-namespace
spec:
  type: ClusterIP
  selector:
    app: giants-app-frontend
  ports:
    - port: 80
      targetPort: 3000
