k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giants-ingress
  namespace: giants-namespace
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: giants-service-backend
                port:
                  number: 80

          - path: /team-metrics
            pathType: Prefix
            backend:
              service:
                name: giants-service-backend
                port:
                  number: 80

          - path: /alerts
            pathType: Prefix
            backend:
              service:
                name: giants-service-backend
                port:
                  number: 80

          - path: /alert-rules
            pathType: Prefix
            backend:
              service:
                name: giants-service-backend
                port:
                  number: 80

          - path: /alert-history
            pathType: Prefix
            backend:
              service:
                name: giants-service-backend
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: giants-service-frontend
                port:
                  number: 80
